# oascomply

./: .coveragerc  .gitignore  .gitmodules  INSTALL.md  README.md  pyproject.toml
assess/: README.md
assess/discriminator/: README.md
assess/discriminator/allof-entry-doc/in/: components.yaml  openapi.yaml
assess/discriminator/allof-entry-doc/multi-loose/: components.yaml  openapi.yaml
assess/discriminator/allof-entry-doc/multi-strict/: resolved.yaml
assess/discriminator/allof-entry-doc/single/: openapi.yaml
assess/discriminator/allof-same-doc/in/: components.yaml
assess/discriminator/allof-same-doc/multi/: components.yaml  openapi.yaml
assess/discriminator/allof-same-doc/single/: openapi.yaml  resolved.yaml
assess/discriminator/oneof-entry-doc/in/: components.yaml
assess/discriminator/oneof-entry-doc/multi-loose/: components.yaml  openapi.yaml
assess/discriminator/oneof-entry-doc/single/: openapi.yaml
assess/discriminator/oneof-same-doc/in/: components.yaml  openapi.yaml
assess/operationId/: README.md
assess/refConflict/: README.md
assess/refConflict/doc-ref/: resolved.yaml
assess/refConflict/ref-ref/: resolved.yaml
assess/refConflict/refchild-ref/: resolved.yaml
assess/schemaBaseUri/: README.md
assess/security/: README.md
descriptions/: README.md  cloudflare.yaml  uspto-datasetlist.yaml  uspto.yaml
docs/: conf.py  index.rst  modules.rst
docs/modules/: apidescription.rst  cli.rst  oas30dialect.rst  oas3dialect.rst  oascomply.rst  oasgraph.rst  oassource.rst  patch.rst  ptrtemplates.rst  resource.rst  resourceid.rst  schemaparse.rst
oascomply/: .oasgraph.py.swp  __init__.py  apidescription.py  cli.py  exceptions.py  oas30dialect.py  oas3dialect.py  oascatalog.py  oasgraph.py  oasjson.py  oassource.py  parse.py  patch.py  pointers.py  ptrtemplates.py  reparse.py  resource.py  resourceid.py  schemaparse.py  serializer.py  urimapping.py
oasparse/: apidescription.py  oasgraph.py  oastype4jschon.py  parse.py  patch.py  schemaparse.py  thing.py
patches/oas/v3.0/: merge-patch.yaml  preliminary-patch.json
patches/oas/v3.1/: 2020-12.yaml  dialect-meta.yaml  extension-meta.yaml  merge-patch.yaml  preliminary-patch.json
reports/: processing-model-details.md  processing-model-summary.md
schemas/dialect/: oas-ontology.json  oastype.json
schemas/meta/: oas-ontology.json  oastype.json
schemas/oas/v3.0/: base.json  schema.json  schema.yaml
schemas/oas/v3.1/: 2020-12.json  dialect.json  meta.json  schema.json
scripts/: patch-schemas.py
semantics/: oas-ontology.ttl
tests/: __init__.py  test_cli.py  test_oassource.py  test_pointers.py  test_ptrtemplates.py  test_resource.py  test_resource_manager.py  test_urimapping.py
tests/local-data/a/: junk.yaml  openapi.yaml
tests/local-data/b/: openapi.json  path-item.json  schema.json
tutorial/: minimal.json  preload.args  references.args
tutorial/3.0/: references.args
tutorial/3.0/references/: openapi.json
tutorial/3.1/: references.args
tutorial/3.1/references/: openapi.json
tutorial/invalid/: examples.yaml  no-info.json  no-openapi.json  wrong-ref-type.yaml
tutorial/references/schemas/: bar.json
tutorial/schemas/: formats-invalid.json  formats-valid.json  formats.json  nullable-valid.json  nullable.json
(+63 files in other folders)
