[tool.poetry]
name = "oascomply"
version = "0.1.0"
description = "OpenAPI Specification Compliance Tools"
authors = ["Henry H. Andrews <handews@modern-json-schema.com>"]
readme = "README.md"

[tool.poetry.scripts]
oascomply = 'oascomply.apidescription:ApiDescription.load'
patch-oas-schemas = 'oascomply.patch:patch'
yaml-to-json = 'oascomply.patch:yaml_to_json'

[tool.poetry.dependencies]
python = "^3.8"
jschon = "^0.10.2"
pyyaml = "^6.0"
rdflib = "^6.3.2"
pyshacl = "^0.22.1"
json-merge-patch = "^0.2"
abnf = "^2.2.0"
rfc3987 = "^1.3.8"
# The no-deprecation-warnings branch has been merged upstream, but there
# is no published timeline for a 2.0.1 or 2.1.0 release
rfc3986 = { extras = ["idna"], git = "https://github.com/handrews/rfc3986.git", branch = "no-deprecation-warnings"}
urnparse = "^0.2.0"
json-source-map = "^1.0.5"
yaml-source-map = { git = "https://github.com/handrews/yaml-source-map.git", branch = "versions" }
regex = "^2023.5.5"
idna = "^3.4"
tonyg-rfc3339 = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
